--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -59,5 +59,9 @@
   "address": "Адрес",
   "enter_your_address": "Введите ваш адрес",
   "all": "Все",
-  "payment_success": "Спасибо, Ваш заказ принят! \n Наши сотрудники свяжутся с вами в ближайшее время. Номер заказа: {invId}"
+  "payment_success": "Спасибо, Ваш заказ принят! \n Наши сотрудники свяжутся с вами в ближайшее время. Номер заказа: {invId}",
+  "city":"Город",
+  "enter_your_city":"Выберите ваш город",
+  "deliveryType":"Доставка",
+  "select_delivery_type":"Выберите доставку"  
 }
