--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -14,6 +14,8 @@
   "dishes": "Посуда",
   "wine_glasses": "Фужеры",
   "company_history": "История компании",
+  "public_offer":"Договор оферты",
+  "privacy_policy":"Политика конфиденциальности",
   "product_range": "Ассортимент",
   "company_values": "Ценности",
   "delivery_and_payment": "Доставка и оплата",
