--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -20,7 +20,7 @@
   "company_values": "Ценности",
   "delivery_and_payment": "Доставка и оплата",
   "store_addresses": "Адреса магазинов",
-  "working_days": "Работаем ежедневно",
+  "working_days": "https://www.instagram.com/noble_almaty/",
   "working_hours": "10:00 до 20:00",
   "go_up": "Наверх",
   "more_info": "Подробнее",
