--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -15,12 +15,17 @@
   "wine_glasses": "Фужеры",
   "company_history": "История компании",
   "public_offer":"Договор оферты",
+  "delivery_info":"Доставка и оплата",
+  "garanty_return":"Гарантия и возврат",
   "privacy_policy":"Политика конфиденциальности",
   "product_range": "Ассортимент",
   "company_values": "Ценности",
   "delivery_and_payment": "Доставка и оплата",
   "store_addresses": "Адреса магазинов",
-  "working_days": "https://www.instagram.com/noble_almaty/",
+  "working_days": "Instagram",
+  "whatsappsamal":"Напишите нам Самал-2/52",
+  "whatsappmiras":"Напишите нам Мкр. Мирас 2Б",
+  "whatsappastana":"Напишите нам Магнилик Ел 42",
   "working_hours": "10:00 до 20:00",
   "go_up": "Наверх",
   "more_info": "Подробнее",
