--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -25,7 +25,7 @@
   "working_days": "Instagram",
   "whatsappsamal":"Напишите нам Самал-2/52",
   "whatsappmiras":"Напишите нам Мкр. Мирас 2Б",
-  "whatsappastana":"Напишите нам Магнилик Ел 42",
+  "whatsappastana":"Напишите нам Мангилик Ел 42",
   "working_hours": "10:00 до 20:00",
   "go_up": "Наверх",
   "more_info": "Подробнее",
